# OpenGL-Template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
src/core/: App.cpp  App.hpp  CMakeLists.txt  Gui.cpp  Gui.hpp  appgui.cpp  appgui.hpp  application.cpp  application.hpp  keyboard.cpp  keyboard.hpp  mouse.hpp
src/core/deprecated/: application.cpp  application.hpp  keyboard.cpp
src/features/: CMakeLists.txt  testfeature.cpp  testfeature.hpp
src/gui/: CMakeLists.txt  appgui.cpp  appgui.hpp  imguiwrapper.cpp  imguiwrapper.hpp
src/primitives/: CMakeLists.txt  triangle.cpp  triangle.hpp
